# cmake4cdt

./: README.md  index.html
com.rohde_schwarz.cmake4cdt/: .project  build.properties  plugin.xml
com.rohde_schwarz.cmake4cdt/OSGI-INF/l10n/: bundle.properties
com.rohde_schwarz.cmake4cdt/src/com/rohde_schwarz/cmake4cdt/: Activator.java  CMakeConsole.java  CMakeGenerator.java  CMakeMakefileGenerator.java  cmakeProjectBuilder.java  cmakeProjectNature.java  newCMakeProject.java
com.rohde_schwarz.cmake4cdt/src/com/rohde_schwarz/cmake4cdt/popup/actions/: NewAction.java
com.rohde_schwarz.cmake4cdt/src/com/rohde_schwarz/cmake4cdt/ui/: AvailArchsEditor.java  CMakeConsole.java  CMakePreferencePage.java  CMakePropertyConstants.java  CMakePropertyPage.java  DestdirFieldEditor.java  DestdirInitializer.java  PreferenceConstants.java  PreferenceInitializer.java  ProjectPathInitializer.java  TargetArchInitializer.java  TargetDeviceInitializer.java  TargetDevicesEditor.java
com.rohde_schwarz.cmake4cdt/src/org/eclipse/cdt/cmake/: Activator.java  CMakeMakefileGenerator.java  CMakeProjectBuilder.java  CMakeProjectNature.java  CMakeSettings.java  cmakeProjectBuilder.java  cmakeProjectNature.java  newCMakeProject.java
com.rohde_schwarz.cmake4cdt/src/org/eclipse/cdt/cmake/ui/: ArchCellEditor.java  ArchTable.java  ArchToolchainPair.java  ArchToolchainPairEditor.java  AvailArchsEditor.java  CMakeConsole.java  CMakePreferencePage.java  (+12 more)
com.rohde_schwarz.cmake4cdt/templates/EmptyProject/: template.xml
com.rohde_schwarz.cmake4cdt/templates/EmptyProject2/: template.properties  template.xml
com.rohde_schwarz.cmake4cdt/templates/emptyproject/: template.xml
org.eclipse.cdt.cmake.docs/: .project
org.eclipse.cdt.cmake4cdt/: .classpath  build.properties  org.json.target  plugin.xml
org.eclipse.cdt.cmake4cdt.feature/: .project  build.properties  feature.xml
org.eclipse.cdt.cmake4cdt.update-site/: .project  site.xml
org.eclipse.cdt.cmake4cdt/OSGI-INF/l10n/: bundle.properties
org.eclipse.cdt.cmake4cdt/src/org/eclipse/cdt/cmake/: Activator.java  CMakeErrorParserStdErr.java  CMakeErrorParserStdOut.java  CMakeInfo.java  CMakeInfoRetriever.java  CMakeMakefileGenerator.java  CMakeOutputPath.java  CMakeProjectBuilderImpl.java  CMakeProjectGenerator.java  CMakeProjectNature.java  CMakeSettings.java  CXCompInfo.java  CommandLauncherRC.java  IAcceptsCMakeInfo.java  ICMakeCommandConstants.java  newCMakeProject.java
org.eclipse.cdt.cmake4cdt/templates/ConsoleHelloWorld/: CMakeLists.txt  main.cpp  template.properties  template.xml
org.eclipse.cdt.cmake4cdt/templates/EmptyProject/: template.properties  template.xml
org.eclipse.cdt.cmake4cdt/templates/EmptyProject2/: template.xml
org.eclipse.cdt.cmake4cdt/templates/MinimalQtDialog/: CMakeLists.txt  Dialog.cpp  Dialog.h  help.html  main.cpp  template.properties  template.xml
org.eclipse.cdt.multiarch/: .project  plugin.xml
org.eclipse.cdt.multiarch/src/org/eclipse/cdt/multiarch/: Activator.java  ArchComboBox.java  DeviceComboBox.java  PreferenceConstants.java  PreferenceInitializer.java  Preferences.java  Settings.java  TargetArchInitializer.java  TargetDeviceInitializer.java
org.json.copyof/: .project
(+45 files in other folders)
